Reset box-sizing on embed input. And z-index fixes. Closes #394.

--- a/wp-content/themes/glp/less/participant-video.less
+++ b/wp-content/themes/glp/less/participant-video.less
@@ -279,7 +279,7 @@
 }
 .participant-detail-video {
 	position: relative;
-	z-index: 1050;
+	// z-index: 1050;
 }
 .participant-clip:hover .control-slider-area-cntnr {
 	.opacity(100);
