--- a/wp-content/themes/glp/less/style.less
+++ b/wp-content/themes/glp/less/style.less
@@ -212,6 +212,9 @@
 	input.copyable {
 		width: 100%;
 		padding: 0.5em;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 		&:focus {
 			outline: none;
 		}
@@ -781,6 +784,7 @@
 	#banner #nav-featured {
 		display: block;
 		margin: 0;
+		overflow: hidden;
 		.carousel, .carousel-inner {
 			margin: 0;
 		}
